added new blog sites and removed sethemed section from main page

--- a/index.html
+++ b/index.html
@@ -131,18 +131,18 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/ai.png" alt="artificial intelligence thumbnail image" class="icon">
-                            <h6 class="title">Artificial Intelligence</h6>
-                            <p class="subtitle">#ChatGPT #MidJourney #QuillBot #ElevenLabs #D-ID</p>
+                            <img src="assets/imgs/testing.png" alt="testing thumbnail image" class="icon">
+                            <h6 class="title">Quality Control</h6>
+                            <p class="subtitle">#Selenium #Pytest #Unittest #CoveragePy</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/imgs/web.png" alt="web thumbnail image" class="icon">
-                            <h6 class="title">SEO</h6>
-                            <p class="subtitle">#SurferSEO #GoogleAnalytics #GoogleTrends #KWFinder #TubeBuddy</p>
+                            <img src="assets/imgs/ai.png" alt="artificial intelligence thumbnail image" class="icon">
+                            <h6 class="title">Artificial Intelligence</h6>
+                            <p class="subtitle">#ChatGPT #MidJourney #QuillBot #ElevenLabs #D-ID</p>
                         </div>
                     </div>
                 </div>
@@ -180,12 +180,12 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="artificial-intelligence.html" class="portfolio-card">
+                    <a href="master-software-testing-with-test-driven-development-and-selenium.html" class="portfolio-card">
                         <img class="portfolio-card-img" src="assets/imgs/portf-03.png" class="img-responsive rounded" alt="futuristic person">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Artificial Intelligence</h5>
-                                <p class="font-weight-normal">Category: MidJourney Images</p>
+                                <h4>Software Testing</h5>
+                                <p class="font-weight-normal">Category: Quality Control</p>
                             </span>                         
                         </span>                     
                     </a>
@@ -319,52 +319,35 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <a href="discover-the-power-of-magic-submitter-the-ultimate-seo-automation-tool.html"><img src="assets/imgs/post-01.png" class="blog-card-img" alt="futuristic robot"></a>
+                    <a href="unlock-sphinx-magic-easy-python-documentation-with-sphinx.html"><img src="assets/imgs/post-01.png" class="blog-card-img" alt="futuristic robot"></a>
                 </div>
                 <div class="blog-card-body">
-                    <h5 class="blog-card-title">Magic Submitter Review | 2023</h6>
+                    <h5 class="blog-card-title">Sphinx | Python Documentation Generator</h6>
 
                     <p class="blog-card-caption">
                         <a href="#">By: Maciej Jaroszewski</a>
                     </p>
-                    <p><b>Magic Submitter is a powerful and versatile SEO tool that can help website owners and marketers achieve their SEO goals with ease. With its advanced automation features, Magic Submitter simplifies the process of creating and distributing content across a wide range of platforms, helping to increase visibility and drive traffic to your website.
-                        While there are many other SEO tools available on the market, few can match the comprehensive features and functionality of Magic Submitter. Its ability to automate tasks, such as backlink building and social bookmarking, makes it a valuable asset for any business or individual looking to improve their online presence.
+                    <p><b>Sphinx is not merely a documentation generator; it's a dynamic ally in the pursuit of clear, comprehensive, and user-friendly documentation. As Python developers, embracing Sphinx is a strategic move towards enhancing collaboration, easing maintenance burdens, and ultimately crafting software that transcends the test of time. 
+                        Dive into the Sphinx magic, explore its nuanced features, and witness your documentation prowess ascend to new heights. Your code deserves it, and so do your users.
                     </b></p>
-                    <a href="discover-the-power-of-magic-submitter-the-ultimate-seo-automation-tool.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                    <a href="unlock-sphinx-magic-easy-python-documentation-with-sphinx.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                 </div>
             </div><!-- end of blog wrapper -->
 
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <a href="transform-your-online-success-with-the-google-news-kings-traffic-formula.html"><img src="assets/imgs/post-02.png" class="blog-card-img" alt="futuristic hardware"></a>
+                    <a href="master-istqb-ctfl-exam-learn-effectively-for-success.html"><img src="assets/imgs/post-02.png" class="blog-card-img" alt="futuristic hardware"></a>
                 </div>
                 <div class="blog-card-body">
-                    <h5 class="blog-card-title">Google News Kings Review | 2023</h6>
+                    <h5 class="blog-card-title">How to Prepare for ISTQB CTFL Exam | Pro Tips</h6>
 
                     <p class="blog-card-caption">
                         <a href="#">By: Maciej Jaroszewski</a>
-                        <p><b>By following the Google News content guidelines and utilizing the Google News Kings traffic formula, you can increase your chances of getting approved and staying approved on the platform. The benefits of being approved on Google News are numerous, including increased website traffic, higher search engine rankings, and more opportunities for monetization.
-                            By appearing on top of the search results and reaching a wider audience, businesses and websites can increase their online visibility and establish themselves as credible sources of information in their respective niches.
+                        <p><b>Preparing for the ISTQB CTFL exam requires a strategic and systematic approach. By understanding the importance of reading different syllabus versions, adopting a structured learning method, and leveraging additional resources such as Udemy courses and ISTQB member-authored books, you set yourself on the path to success. 
+                            Best of luck on your journey to becoming a certified software tester!
                         </b></p>
-                    <a href="transform-your-online-success-with-the-google-news-kings-traffic-formula.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
-                </div>
-            </div><!-- end of blog wrapper -->
-
-            <!-- blog-wrapper -->
-            <div class="blog-card">
-                <div class="blog-card-header">
-                    <a href="find-the-right-keywords-for-your-business-with-power-suggest-pro-real-time-data.html"><img src="assets/imgs/post-03.png" class="blog-card-img" alt="futuristic city with track"></a>
-                </div>
-                <div class="blog-card-body">
-                    <h5 class="blog-card-title">Power Suggest Pro Review | 2023</h6>
-
-                    <p class="blog-card-caption">
-                        <a href="#">By: Maciej Jaroszewski</a>
-                        <p><b>Keyword research is an essential aspect of any successful online marketing strategy. It helps businesses identify the keywords and phrases that their target audience is using to search for information, products, and services online. However, finding the right keywords can be a challenging task, especially when there are thousands of variations to choose from.
-                            By using Power Suggest Pro in your keyword research process, you can create content that is highly relevant to your audience and that will help you achieve your business goals. 
-                        </b></p>
-                    <a href="find-the-right-keywords-for-your-business-with-power-suggest-pro-real-time-data.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                    <a href="master-istqb-ctfl-exam-learn-effectively-for-success.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                 </div>
             </div><!-- end of blog wrapper -->
 
