--- a/master-software-testing-with-test-driven-development-and-selenium.html
+++ b/master-software-testing-with-test-driven-development-and-selenium.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Exploring the Latest AI Tools for Creative Design and Content Creation</title>
+    <title>Master Software Testing with Test-Driven Development and Selenium | Boost Code Coverage</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Unlock the power of artificial intelligence (AI) for your digital marketing needs! Discover the AI tools that can streamline your repeatable tasks, increase efficiency, and automate affiliate marketing processes. From AI-powered SEO strategies to ChatGPT's content generation capabilities, I share my insights on how AI can help you generate high-quality content quickly and efficiently. Plus, find out how MidJourney's art creation capabilities can take your designs to the next level. Explore the exciting world of AI with me and revolutionize your digital marketing strategy today.">
+    <meta name="description" content="Explore the power of test-driven development, ace Selenium testing, and enhance code coverage. Elevate your software testing game now!">
     <meta name="author" content="Maciej Jaroszewski">
     <meta id="keywords" name="keywords" content="artificial intelligence, ai tools, digital marketing, seo, chatgpt, midjourney" />
     <meta property="og:site_name" content="https://mjaroszewski.website" />
-    <meta property="og:url" content="https://mjaroszewski.website/artificial-intelligence.html" />
-    <meta property="og:title" content="Exploring the Latest AI Tools for Creative Design and Content Creation" />
-    <meta property="og:description" content="Unlock the power of artificial intelligence (AI) for your digital marketing needs! Discover the AI tools that can streamline your repeatable tasks, increase efficiency, and automate affiliate marketing processes. From AI-powered SEO strategies to ChatGPT's content generation capabilities, I share my insights on how AI can help you generate high-quality content quickly and efficiently. Plus, find out how MidJourney's art creation capabilities can take your designs to the next level. Explore the exciting world of AI with me and revolutionize your digital marketing strategy today." />
+    <meta property="og:url" content="https://mjaroszewski.website/software-tesing.html" />
+    <meta property="og:title" content="Master Software Testing with Test-Driven Development and Selenium | Boost Code Coverage" />
+    <meta property="og:description" content="Explore the power of test-driven development, ace Selenium testing, and enhance code coverage. Elevate your software testing game now!" />
     <meta property="og:type" content="article" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@NatLife_quest" />
     <meta name="twitter:url" content="https://mjaroszewski.website" />
-    <meta name="twitter:title" content="Exploring the Latest AI Tools for Creative Design and Content Creation" />
-    <meta name="twitter:description" content="Unlock the power of artificial intelligence (AI) for your digital marketing needs! Discover the AI tools that can streamline your repeatable tasks, increase efficiency, and automate affiliate marketing processes. From AI-powered SEO strategies to ChatGPT's content generation capabilities, I share my insights on how AI can help you generate high-quality content quickly and efficiently. Plus, find out how MidJourney's art creation capabilities can take your designs to the next level. Explore the exciting world of AI with me and revolutionize your digital marketing strategy today." />
+    <meta name="twitter:title" content="Master Software Testing with Test-Driven Development and Selenium | Boost Code Coverage" />
+    <meta name="twitter:description" content="Explore the power of test-driven development, ace Selenium testing, and enhance code coverage. Elevate your software testing game now!" />
     <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/ai-tools.png" />
     
     <meta property="og:image:width" content="1200" />
@@ -79,18 +79,18 @@
             <!-- container -->
             <div class="container text-center">
                 <p class="section-subtitle text-light"><strong>Recent Projects</strong></p>
-                <h6 class="section-title mb-6 text-light">Artificial Intelligence</h6>
+                <h6 class="section-title mb-6 text-light">Software Testing</h6>
                 <!-- blog-wrapper -->
                 <div class="blog-card">
                     <div class="blog-card-header">
                         <img src="assets/imgs/ai-tools.png" class="blog-card-img" alt="futuristic brain image">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">ChatGPT and MIdJourney for Digital Marketing</h6>
-                        <p><b>I've recently been experimenting with various AI tools to streamline my repeatable tasks and increase efficiency.
-                            One of the areas where they have been especially useful for me is in automating various affiliate marketing processes. For example, I've been using AI-powered SEO strategies for my newly created blog.
-                            I've found ChatGPT to be incredibly useful in generating high-quality content quickly and efficiently.
-                            Another AI tool that has really blown my mind is MidJourney, which has amazing art creation capabilities. This tool uses AI algorithms to generate unique and creative designs, which can be used for everything from logos to web graphics. As a creative person, I find this tool to be incredibly inspiring and exciting.
+                        <h5 class="blog-card-title">Early testing techniques inject a dose of efficiency into your development process.</h6>
+                        <p><b>I've been diving deep into the world of "test first approaches" to turbocharge my efficiency and put repetitive tasks on autopilot. The beauty of these techniques truly shines when we weave them into the fabric of our software development life cycle. 
+                            In my latest project, Test Driven Development has been a game-changer. I start by framing my expectations through tests, envisioning the functionality I desire. As I code, these tests act as my compass, guiding me toward the destination of flawless execution. 
+                            The result? Code that not only meets specifications but does so with elegance and precision.
+
 
                         </b></p>
                     </div>
@@ -98,27 +98,40 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/ytb-video.png" class="blog-card-img" alt="cartoon style pixeled robots">
+                        <img src="assets/imgs/selenium_testing.png" class="blog-card-img" alt="cartoon style pixeled robots">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">If you're interested in the latest news about stocks, cryptocurrencies and forex, be sure to check out "Taurus Trading" on YouTube. </h6>
-                        <p><b>I started this project because I wanted to experiment with the short-form video format that is being strongly promoted by YouTube. To make the creation process easier, I use Eleven Labs text-to-speech AI software to create my video scripts. This tool allows me to generate high-quality narration quickly and easily, which saves me time and effort.
-                            However, coming up with content ideas can be a challenge. That's why I use ChatGPT to get inspiration for my videos. This language model is an incredible resource that can generate content ideas on just about any topic you can think of. It's like having a virtual brainstorming partner that is available 24/7.
+                        <h5 class="blog-card-title">Unleashing the Power of Selenium Testing: Embracing the Page Object Pattern. </h6>
+                        <p><b>Selenium, the open-source automation tool cherished by testers worldwide, empowers us to automate web applications for robust and reliable testing. Yet, as our test suites grow in complexity, maintaining and scaling them becomes a formidable challenge. This is where the Page Object Pattern steps in as a savior.
+                            At its core, the Page Object Pattern is a design pattern that encourages the creation of an object-oriented model of the web pages or components under test. Instead of scattering locators and interactions throughout your test code, the Page Object Pattern consolidates them into dedicated classes, abstracting the page-specific details.
                         </b></p>
-                        <a href="https://www.youtube.com/@taurustrading9727/shorts" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Channel</button></a>
+                        <a href="https://github.com/mjaroszewski1979/golden-cross-v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Examples</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/naturalife-blog.png" class="blog-card-img" alt="cartoon style pixeled robots">
+                        <img src="assets/imgs/code_coverage.png" class="blog-card-img" alt="funny dinosaur with a laptop">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">To learn about healthy lifestyle and bio dietary supplements you might want to check out my blog website titled "Naturalife".</h6>
-                        <p><b>I started this project to experiment with different SEO strategies to help increase the ranking of my articles in Google search results. To create high-quality content quickly and easily, which is essential for keeping up with the demands of a busy blog, i use ChatGPT.
-                            To pass AI detection tools and avoids plagiarism, I also use various tactics like Quillbot rephrasing AI tool and other text formatting techniques. Additionally, I am also exploring RoBERTa - Facebook's self-supervised method for pretraining natural language processing models. This technology can help me to further improve my content creation process and create even more engaging articles.
+                        <h5 class="blog-card-title">The fusion of Selenium tests, unit tests, and CoveragePy paints a picture of unparalleled code quality and reliability.</h6>
+                        <p><b>Combining Selenium tests and unit tests provides a holistic approach to code coverage. While Selenium tests navigate through the application's user interface, unit tests delve into the underlying logic and functions. The synergy ensures that both the frontend and backend of your application are thoroughly tested, leaving no room for unnoticed vulnerabilities.
+                            By seamlessly integrating with our Selenium and unit test suites, CoveragePy analyzes which parts of our code are exercised during testing and displays the results in a user-friendly format.
                         </b></p>
-                        <a href="https://naturalife.quest/" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">Naturalife Blog</button></a>
+                        <a href="https://github.com/mjaroszewski1979/investors_v2" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Examples</button></a>
+                    </div>
+                </div><!-- end of blog wrapper -->
+
+                <div class="blog-card">
+                    <div class="blog-card-header">
+                        <img src="assets/imgs/set_up_method.png" class="blog-card-img" alt="futuristic track with bright colors">
+                    </div>
+                    <div class="blog-card-body">
+                        <h5 class="blog-card-title">By setting up the necessary data and resources before each test, we ensure that our tests are always running with the correct environment and data.</h6>
+                        <p><b>Writing efficient and fast tests is essential for a successful project. In Django, one way to optimize tests is by utilizing the setUp method to handle especially expensive setup operations for all of the tests within a module. The setUp method is a method that is called before each test in a module. It is used to set up any test data or other resources needed for the tests. 
+                             However, it's important to keep in mind that the setUp method should be used judiciously. While it can be tempting to use the setUp method to handle all setup operations, doing so can actually slow down our tests. 
+                        </b></p>
+                        <a href="https://github.com/mjaroszewski1979/django_car" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Examples</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
