--- a/index.html
+++ b/index.html
@@ -351,6 +351,23 @@
                 </div>
             </div><!-- end of blog wrapper -->
 
+            <!-- blog-wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <a href="master-istqb-ctfl-exam-learn-effectively-for-success.html"><img src="assets/imgs/generative_ai.png" class="blog-card-img" alt="futuristic hardware"></a>
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Generative AI | Microsoft & LinkedIn's Course Review</h6>
+
+                    <p class="blog-card-caption">
+                        <a href="#">By: Maciej Jaroszewski</a>
+                        <p><b>This course is a game-changer, offering a well-structured journey into the world of generative AI. From basics to ethical considerations, it's a must for both beginners and those familiar with the subject.
+                            Kudos to the fantastic instructors who bring their expertise to the virtual classroom! Pinar Seyhan Demirdag and Doug Rose's sections are absolute gems, filled with the most interesting insights. 
+                        </b></p>
+                    <a href="microsoft-linkedin-generative-ai-course-a-deep-dive-and-honest-review.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                </div>
+            </div><!-- end of blog wrapper -->
+
         </div><!-- end of container -->
     </section><!-- end of blog section -->
 
