updated live projects section by deleting link to deta project'

--- a/web_development.html
+++ b/web_development.html
@@ -158,6 +158,19 @@
                         <a href="get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
+
+                <div class="blog-card">
+                    <div class="blog-card-header">
+                        <a href="https://github.com/mjaroszewski1979/stooq-api"><img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Stooq API website mockup"></a>
+                    </div>
+                    <div class="blog-card-body">
+                        <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h6>
+                            <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
+                                The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
+                        </b></p>
+                        <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                    </div>
+                </div><!-- end of blog wrapper -->
     
             </div><!-- end of container -->
         </section><!-- end of blog section -->
