removed broken ytb link

--- a/web_development.html
+++ b/web_development.html
@@ -109,19 +109,6 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <a href="customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html"><img src="assets/imgs/famous-investors.png" class="blog-card-img" alt="famous ivestors website mockup"></a>
-                    </div>
-                    <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application utilizes the Django framework and its Object-Relational Mapper (ORM) to facilitate the retrieval of stored data.</h6>
-                        <p><b>It is connected to a MySQL database hosted on the Pythonanywhere server. The software's primary objective is to enable users to execute complex filtering operations while prioritizing the speed and efficiency of querying.
-                            By utilizing this software, users can save valuable time by executing advanced filtering operations quickly and efficiently. Additionally, the software's Python and Django backend offer flexibility and customizability, making it an ideal choice for users who want to customize their querying process to fit their specific needs.
-                        </b></p>
-                        <a href="customizable-querying-with-python-django-and-mysql-retrieve-your-data-with-ease.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
-                    </div>
-                </div><!-- end of blog wrapper -->
-
-                <div class="blog-card">
-                    <div class="blog-card-header">
                         <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html"><img src="assets/imgs/django-cars.png" class="blog-card-img" alt="Django Cars website mockup"></a>
                     </div>
                     <div class="blog-card-body">
@@ -130,19 +117,6 @@
                             he integration of HTMX technology into this Django application ensures that the user experience is smooth and seamless. HTMX is a modern tool that simplifies the development process by allowing developers to create interactive web pages with minimal effort.
                         </b></p>
                         <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
-                    </div>
-                </div><!-- end of blog wrapper -->
-
-                <div class="blog-card">
-                    <div class="blog-card-header">
-                        <a href="django-and-yahoo-finance-api-your-tools-for-successful-bitcoin-trading.html"><img src="assets/imgs/golden-cross.png" class="blog-card-img" alt="Golden Cross Website Mockup"></a>
-                    </div>
-                    <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is a Python application that is designed to display trading signals based on a mathematical algorithm.</h6>
-                        <p><b>The algorithm determines the ideal time to buy or sell Bitcoin. The application fetches data from the Yahoo Finance API and calculates the current trend direction using a 252-day lookback period which is approximately one year.
-                            Once the calculations are complete, the results are presented in a user-friendly table format. This application is ideal for traders who are looking to make data-driven decisions when it comes to buying or selling Bitcoin. With the help of the algorithm, the application can analyze large amounts of data and provide recommendations on when to make a move.
-                        </b></p>
-                        <a href="django-and-yahoo-finance-api-your-tools-for-successful-bitcoin-trading.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -171,6 +145,19 @@
                         <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
+
+                <div class="blog-card">
+                    <div class="blog-card-header">
+                        <a href="find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html"><img src="assets/imgs/dogs-of-dow.png" class="blog-card-img" alt="dogs of dow website mockup"></a>
+                    </div>
+                    <div class="blog-card-body">
+                        <h5 class="blog-card-title">This is an application build with one of the fastest Python web frameworks - FastAPI. </h6>
+                        <p><b>In fact, its speed is at par with Node.js and Go, it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield dividend members of the Dow Jones Industrial Index included in Yahoo Finance's database. After receiving user input, application is gaining access to particular stock historical data by utilizing pandas-datareader. 
+                            For password hashing, we can use Werkzeug Security to define functions that handle password hashing and checking if a password is correct.
+                        </b></p>
+                        <a href="find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                    </div>
+                </div><!-- end of blog wrapper -->
     
             </div><!-- end of container -->
         </section><!-- end of blog section -->
@@ -186,7 +173,6 @@
                 <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
                 <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
-                <a href="https://www.youtube.com/channel/UCexMIW5hk934WSldDTnuWow" class="link" target="_blank"><i class="ti-youtube"></i></a>
             </div>
         </footer>
     </div> <!-- end of page footer -->
