--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/head_img.png" class="about-img" alt="Maciej Jaroszewski futuristic image">
+                    <img src="assets/imgs/pic002.jpg" class="about-img" alt="Maciej Jaroszewski futuristic image">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
