--- a/experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html
+++ b/experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html
@@ -142,7 +142,7 @@
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
                 <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
-                <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/mjaroszewski/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
             </div>
         </footer>
