made changes to sections of data analysis and web development pages to ensure that displayed projects are reflecting particular themes

--- a/data-analysis.html
+++ b/data-analysis.html
@@ -95,13 +95,14 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html"><img src="assets/imgs/market-bias.png" class="blog-card-img" alt="market bias website mockup"></a>
+                        <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html"><img src="assets/imgs/global-macro.png" class="blog-card-img" alt="global macro website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
-                        <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
+                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
+                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
+                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
                         </b></p>
-                        <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html" class="blog-card-link">Read more<i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
