--- a/web_development.html
+++ b/web_development.html
@@ -96,19 +96,6 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html"><img src="assets/imgs/global-macro.png" class="blog-card-img" alt="global macro website mockup"></a>
-                    </div>
-                    <div class="blog-card-body">
-                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
-                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
-                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
-                        </b></p>
-                        <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html" class="blog-card-link">Read more<i class="ti-angle-double-right"></i></a>
-                    </div>
-                </div><!-- end of blog wrapper -->
-
-                <div class="blog-card">
-                    <div class="blog-card-header">
                         <a href="experience-seamless-user-interaction-with-htmx-django-amazon-s3-and-google-authentication.html"><img src="assets/imgs/django-cars.png" class="blog-card-img" alt="Django Cars website mockup"></a>
                     </div>
                     <div class="blog-card-body">
@@ -135,14 +122,13 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <a href="https://github.com/mjaroszewski1979/stooq-api"><img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Stooq API website mockup"></a>
+                        <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html"><img src="assets/imgs/market-bias.png" class="blog-card-img" alt="market bias website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h6>
-                            <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
-                                The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
+                        <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
+                        <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
